# mmap

./: mmap.cabal
System/IO/: MMap.hs
cbits/: HsMmap.h  posix.c  win32.c
tests/: CpTest.hs  SimpleMMap.hs  mmaptest.hs  testmmap.hs
