Name: mmap
Version: 0.1
Stability: alpha
License: BSD3
License-File: LICENSE
Copyright: 2007-2007, Gracjan Polak
Author: Gracjan Polak <gracjanpolak@gmail.com>
Maintainer: Gracjan Polak <gracjanpolak@gmail.com>
Synopsis: Memory mapping of files for POSIX and Windows
Description:
Cabal-version: >= 1.2
Category: System

Library
  Build-depends: base, bytestring
  Extensions: ForeignFunctionInterface
  Exposed-modules: System.IO.MMap
  Hs-source-dirs: .
  Ghc-options: -O2
  CC-options: -O2 -Wall
  if os(mingw32)
      C-sources: cbits/win32.c
  else
      C-sources: cbits/posix.c

Executable SimpleMMap
  Main-Is:         SimpleMMap.hs
  Hs-Source-Dirs:  tests, .
  if os(mingw32)
      C-sources: cbits/win32.c
  else
      C-sources: cbits/posix.c
