Name: mmap
Version: 0.4.2
Stability: alpha
License: BSD3
License-File: LICENSE
Copyright: 2008, Gracjan Polak
Author: Gracjan Polak <gracjanpolak@gmail.com>
Maintainer: Gracjan Polak <gracjanpolak@gmail.com>
Synopsis: Memory mapped files for POSIX and Windows
Description:
    This library provides a wrapper to mmap(2) or MapViewOfFile,
    allowing files or devices to be lazily loaded into memory as
    strict or lazy ByteStrings, ForeignPtrs or plain Ptrs, using
    the virtual memory subsystem to do on-demand loading.
    Modifications are also supported.
Cabal-version: >= 1.2
Category: System
Build-type: Simple
Extra-Source-Files: HsMmap.h

Library
  Build-depends: base<5, bytestring
  Extensions: ForeignFunctionInterface
  Exposed-modules: System.IO.MMap
  Hs-source-dirs: .
  CC-options: -Wall
  Include-dirs: cbits
  if os(mingw32)
      C-sources: cbits/win32.c
  else
      C-sources: cbits/posix.c


Executable testmmap
  Main-is: tests/testmmap.hs
  Build-depends: base<5, bytestring
  Extensions: ForeignFunctionInterface
  Hs-source-dirs: .
  if flag(test)
     CC-options: -Wall
     Buildable: True
  else
     Buildable: False
  Include-dirs: cbits
  if os(mingw32)
      C-sources: cbits/win32.c
  else
      C-sources: cbits/posix.c
